# property-system

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  codecov.yml  gather_coverage.sh
.github/workflows/: cmake.yml
docs/: mainpage.md
src/: CMakeLists.txt
src/public-include/: Property.h  PropertyProxy.h  PropertySet.h
tests/: CMakeLists.txt  LambdaPropertyTests.cpp  PropertySetTests.cpp  ProxyPropertyTests.cpp  ReferencePropertyTests.cpp  StoragePropertyTests.cpp
